--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.22.0"
@@ -22,6 +23,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react-swc": "^3.9.0",
     "eslint": "^9.25.0",
