--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^12.11.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
     "react-slick": "^0.30.3",
@@ -23,6 +24,7 @@
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react-swc": "^3.9.0",
