--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "hompage": "https://www.gartenbaulandolt.ch",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
